# anomaly-detection-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: default.yaml
results/: auroc_full.json
scripts/: evaluate.py  train.py
src/: config.py
src/api/: app.py  schemas.py
src/data/: mvtec.py
src/demo/: app.py  viz.py
src/models/: coreset.py  patchcore.py
src/preprocessing/: transforms.py
tests/: test_api.py  test_config.py  test_coreset.py  test_data.py  test_patchcore.py  test_transforms.py  test_viz.py
